# nanzen-agents-challenge

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: accounts.csv  billing.csv  contracts.csv  crm_interactions.csv  emails.csv  product_usage.csv  purchase_orders.csv  support_tickets.csv
src/challenge/: __main__.py  agent.py  runner.py  tasks.py
src/challenge/tools/: __init__.py  csv_reader.py  pdf_report.py
tests/: test_tools.py
