[project]
name = "agent-challenge"
version = "0.1.0"
description = "Technical challenge: multi-agent system with shared context"
requires-python = ">=3.11"
dependencies = [
    "smolagents>=1.0",
    "openai>=1.0",
    "reportlab>=4.0",
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/challenge"]
